--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,170 +1,172 @@
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-nav,
-section,
-summary {
-  display: block;
-}
-audio,
-canvas,
-video {
-  display: inline-block;
-}
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-[hidden] {
-  display: none;
-}
-html {
-  font-family: sans-serif;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-}
-a:focus {
-  outline: thin dotted;
-}
-a:active,
-a:hover {
-  outline: 0;
-}
-h1 {
-  font-size: 2em;
-}
-abbr[title] {
-  border-bottom: 1px dotted;
-}
-b,
-strong {
-  font-weight: 700;
-}
-dfn {
-  font-style: italic;
-}
-mark {
-  background: #ff0;
-  color: #000;
-}
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, serif;
-  font-size: 1em;
-}
-pre {
-  white-space: pre-wrap;
-  word-wrap: break-word;
-}
-q {
-  quotes: 2 1C 2 1D 2 18 2 19;
-}
-small {
-  font-size: 80%;
-}
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-sup {
-  top: -0.5em;
-}
-sub {
-  bottom: -0.25em;
-}
-img {
-  border: 0;
-}
-svg:not(:root) {
-  overflow: hidden;
-}
-fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
-}
-button,
-input,
-select,
-textarea {
-  font-family: inherit;
-  font-size: 100%;
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+@import url("https://fonts.googleapis.com/css?family=Rubik:400,500");
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
   margin: 0;
-}
-button,
-input {
-  line-height: normal;
-}
-button,
-html input[type=button],
-input[type=reset],
-input[type=submit] {
-  -webkit-appearance: button;
-  cursor: pointer;
-}
-button[disabled],
-input[disabled] {
-  cursor: default;
-}
-input[type=checkbox],
-input[type=radio] {
-  box-sizing: border-box;
   padding: 0;
-}
-input[type=search] {
-  -webkit-appearance: textfield;
-  box-sizing: content-box;
-}
-input[type=search]::-webkit-search-cancel-button,
-input[type=search]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-textarea {
-  overflow: auto;
-  vertical-align: top;
-}
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
+
 table {
   border-collapse: collapse;
-  border-spacing: 0;
-}
-body,
-figure {
-  margin: 0;
-}
-legend,
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
-.clearfix:after {
-  visibility: hidden;
-  display: block;
-  font-size: 0;
-  content: " ";
-  clear: both;
-  height: 0;
-}
+  border-spacing: 0; }
+
 * {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
+
 html {
-  font-size: 62.5%;
-}
+  font-size: 10px; }
+
 body {
-  background: #d4d4d4;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 2rem;
-}
+  margin: 0px;
+  padding: 0px;
+  width: 100vw;
+  height: 100vh;
+  font-family: "Didact Gothic", sans-serif;
+  color: #37474F; }
+
+main {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center; }
+  main h1 {
+    font-family: "Abril Fatface", cursive;
+    font-size: 5rem;
+    line-height: 6rem;
+    padding-bottom: 50px;
+    animation: slide-down 1s ease; }
+    @media (max-width: 560px) {
+      main h1 {
+        font-size: 3rem;
+        line-height: 4rem; } }
+  main img {
+    display: block;
+    margin: 0 auto;
+    max-width: 150px;
+    padding-bottom: 50px; }
+  main #registration-button {
+    display: block;
+    margin: 0 auto;
+    min-width: 180px;
+    padding: 10px 20px;
+    font-size: 3rem;
+    color: #00BCD4;
+    background: #fff;
+    border: 2px solid #383838;
+    border-radius: 50px;
+    text-decoration: none; }
+    main #registration-button:hover {
+      background: #AB47BC; }
+
+form {
+  width: 40vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto; }
+  @media (max-width: 560px) {
+    form {
+      width: 100vw; } }
+  form .input-field {
+    width: 70%;
+    padding-bottom: 50px;
+    text-align: center;
+    padding: 10px;
+    border-bottom: 2px solid #FF5722;
+    margin-bottom: 30px; }
+    form .input-field button {
+      display: block;
+      margin: 0 auto;
+      min-width: 180px;
+      padding: 10px 20px;
+      font-size: 3rem;
+      color: #00BCD4;
+      background: #fff;
+      border: 2px solid #383838;
+      border-radius: 50px;
+      text-decoration: none; }
+      form .input-field button:hover {
+        background: #AB47BC; }
+  form [placeholder*="User Name"], form [placeholder*="Name your Llama"] {
+    font-family: "Didact Gothic", sans-serif;
+    font-size: 3rem;
+    color: #00BCD4;
+    display: block;
+    border: none; }
+
+.no-visible {
+  display: none; }
+
+#user-info-and-controls {
+  position: absolute;
+  width: 15vw;
+  height: 100vh;
+  left: 20px;
+  font-size: 2rem; }
+  #user-info-and-controls h3, #user-info-and-controls p, #user-info-and-controls button {
+    padding: 15px 0; }
+  #user-info-and-controls h3 {
+    font-size: 3rem; }
+  #user-info-and-controls button {
+    padding-left: 10px;
+    padding-right: 10px; }
+
+#user-pic {
+  position: absolute;
+  top: 50px;
+  right: 20px; }
+  #user-pic img {
+    max-width: 100px;
+    max-height: 100px;
+    border: 3px solid #fff; }
+
+#llama-info {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  font-size: 2rem; }
+
+/*# sourceMappingURL=style.css.map */
