--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,3 +1,4 @@
+// TYPOGRAPHY
 $landing-title: 'Abril Fatface', cursive;
 $font-family-regular: 'Didact Gothic', sans-serif;
 $landing-title-size: 5rem;
@@ -5,14 +6,19 @@ $mobile-landing-title-size: 3rem;
 $name-font-size: 3rem;
 $big-font-size: 2rem;
 $regular-font-size: 1.5rem;
+$h2-font-size: 2.5rem;
+$cheer-font-size: 3.5rem;
 
-
-$standard-color: #37474F;
+// COLOR
+$standard-color: #FF5722;
 $solid-background: #fff;
 $button-background-color: #fff;
 $button-border-color: #383838;
 $button-font-color: #00BCD4;
 $button-hover-background: #AB47BC;
 $input-border-color: #FF5722;
+$h2-color: #FF5722;
+$cheer-color: #FFEB3B;
 
+// PADDING
 $landing-padding-bottom: 50px;
