--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -11,7 +11,21 @@ body{
   padding: 0px;
   width: 100vw;
   height: 100vh;
-  // background-image: linear-gradient(#FF5F6D, #FFC371);
   font-family: $font-family-regular;
   color: $standard-color;
+}
+
+h2 {
+  font-family: $font-family-regular;
+  font-size: $h2-font-size * 2;
+  color: $h2-color;
+  width: 100%;
+  padding-bottom: $landing-padding-bottom - 15px;
+}
+
+p {
+  width: 100%;
+  font-size: $regular-font-size * 1.5;
+  color: $button-font-color;
+  padding-bottom: $landing-padding-bottom - 15px;
 }
