--- a/src/css/_mixins.scss
+++ b/src/css/_mixins.scss
@@ -1,6 +1,6 @@
 @mixin button-style {
-  display: block;
-  margin: 0 auto;
+  display: inline-block;
+  margin: 15px auto;
   min-width: 180px;
   padding: 10px 20px;
   font-size: $regular-font-size * 2;
@@ -8,7 +8,9 @@
   background: $button-background-color;
   border: 2px solid $button-border-color;
   border-radius: 50px;
+  text-align: center;
   text-decoration: none;
+  cursor: pointer;
 
   &:hover {
     background: $button-hover-background;
