Changing how container element is accessed in three

--- a/src/css/_mixins.scss
+++ b/src/css/_mixins.scss
@@ -2,6 +2,7 @@
   display: inline-block;
   margin: 15px auto;
   min-width: 180px;
+  max-width: 300px;
   padding: 10px 20px;
   font-size: $regular-font-size * 2;
   color: $button-font-color;
