--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -6,4 +6,4 @@
 @import 'landing';
 @import 'registration';
 @import 'game';
-@import url('https://fonts.googleapis.com/css?family=Rubik:400,500');
+// @import url('https://fonts.googleapis.com/css?family=Rubik:400,500');
